# bevy_oneshot

./: Cargo.toml  README.md
examples/: oheshot.rs
src/: lib.rs
