[package]
name = "bevy_oneshot"
version = "0.2.1"
edition = "2021"
authors = ["SDesya74 <sdesya74@gmail.com>"]
description = "Simple ohe-shot systems for Bevy"
keywords = ["bevy", "gui", "oheshot", "system"]
readme = "README.md"
repository = "https://github.com/SDesya74/bevy_oneshot"
license = "MIT OR Apache-2.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13"
